--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,9 +9,9 @@
   weight = 10
 
 [[main]]
-  name = "Posts"
-  url = "#posts"
-  weight = 20
+  name = "Publications"
+  url = "#publications"
+  weight = 30
 
 [[main]]
   name = "Projects"
