--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -15,18 +15,23 @@
 
 [[main]]
   name = "Projects"
-  url = "#projects"
-  weight = 30
+  url = "#talks"
+  weight = 40
 
 [[main]]
-  name = "Publications"
-  url = "#featured"
-  weight = 40
+  name = "Work/Research"
+  url = "#experience"
+  weight = 50
+
+[[main]]
+  name = "Accomplish­ments"
+  url = "#accomplish­ments"
+  weight = 60
 
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 60
+  weight = 70
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
